--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ canvas {
   margin: 50px;
 }
 
-.slider-range {
+input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
   height: 10px;
@@ -30,7 +30,7 @@ canvas {
   outline: none;
 }
 
-.slider-range::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
@@ -42,7 +42,7 @@ canvas {
   margin-top: -5px; /* Adjust vertically for centering */
 }
 
-.slider-range::-moz-range-thumb {
+input[type="range"]::-moz-range-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -52,11 +52,10 @@ canvas {
 }
 
 /* Create the progress bar effect */
-.slider-range::-webkit-slider-runnable-track {
+input[type="range"]::-webkit-slider-runnable-track {
   width: 100%;
   height: 10px;
   cursor: pointer;
-  background: linear-gradient(to right, black 0%, black calc((var(--value) - var(--min)) * 1%), #ddd calc((var(--value) - var(--min)) * 1%), #ddd 100%);
 }
 
 .slider-value {
