--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ html {
   /* align-items: center; */
 }
 
-body {
+main {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 
 canvas {
@@ -138,6 +139,8 @@ input[type="radio"]:checked + .button {
   padding-top: 20px;
 }
 
+
+
 .top-button {
   border-top-left-radius: 10px; 
   border-top-right-radius: 10px; 
@@ -186,4 +189,58 @@ input[type="radio"]:checked + .button {
 
 #shuffled:checked + .button {
   background-color: green; /* Or any other color you want when selected */
+}
+
+
+#image-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 0 100px;
+}
+#image-container img {
+  width: 100%;
+  height: auto;
+}
+
+.featured{
+  text-align: center;
+  font-size: 40px;
+}
+
+#load-more{
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+}
+
+#gen-custom{
+  display: block;
+  margin: auto;
+}
+
+button{
+  font-family: geist, Arial, sans-serif;
+  border: none;
+  font-weight: bold;
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 20px;
+  background-color: black; 
+  color: white;
+}
+
+button:hover {
+  background-color: #3a3a3a; /* Add a dark-grey background on hover */
+}
+
+button:active {
+  background-color: black; /* Darker grey when clicked */
+}
+
+#more-buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  margin: 10px;
 }
